# scriptor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Scriptor.apparmor  Scriptor.pro  build_multi.sh  check_chroots.sh  clicks.sh  install.sh  make_chroots.sh  manifest.json.in  multi_dir.sh  openstore.sh  repackage.sh  update_chroots.sh
Scriptor/: IconFileDialog.qml  Main.qml  Scriptor.apparmor  Scriptor.desktop  Scriptor.pro  SystemItem.qml  SystemListItem.qml  storage.js
Scriptor/tests/autopilot/Scriptor/: __init__.py
Scriptor/tests/autopilot/Scriptor/tests/: __init__.py  test_main.py
Scriptor/tests/unit/: tst_main.qml
app/: CMakeLists.txt  DownloadDialog.qml  FirstRun.qml  HeaderForm.qml  Help.qml  IconFileDialog.qml  LabelArea.qml  LabelForm.qml  Main.qml  Message.qml  Output.qml  ProcessBuffer.qml  ProcessItem.qml  ProcessListItem.qml  ScriptPage.qml  Scriptor.desktop.in  ScriptorButton.qml  SettingsPage.qml  SystemListItem.qml  TextForm.qml  Utils.js  popups.js
app/tests/autopilot/: run
backend/: CMakeLists.txt
backend/Scriptor/: Scriptor.pro  backend.cpp  backend.h  qmldir  system.cpp  system.h
backend/modules/Scriptor/: backend.cpp  backend.h  process.cpp  process.h  utils.cpp  utils.h
backend/tests/unit/: tst_mytype.qml
resources/: graphics.qrc
